<resources>
    <string name="app_name">PPFCompanion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--nav_header_main.xml-->
    <string name="by">by Shreya Prabhu</string>
    <string name="nav_header">Public Provident Fund Calculator</string>

    <!--activity_main_drawer-->
    <string name="my_plans">My Plans</string>
    <string name="calculator">Calculator</string>
    <string name="about_ppf">About PPF</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>

    <!-- side_nav_bar -->
    <string name="angle">135</string>

    <!--content_main -->
    <string name="mode">Select a PPF Plan</string>
    <string name="amount_deposite">Amount Deposit(\u20B9)</string>
    <string name="amount_hint">Amount >= 500</string>
    <string name="rate_of_interest">Rate of Interest(%)</string>
    <string name="interest">8.10</string>
    <string name="tenure">Investment Tenure(years)</string>
    <string name="year_hint">Year >= 15</string>
    <string name="start_date">Account Opening Date</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_ppfreport">PPFReport</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="refresh">REFRESH</string>
    <string name="no_of_years">15</string>

    <string name="add_plan">Add plan</string>
    <string name="ads">ads</string>

    <!--fragment_ppfreport-->
    <string name="maturity_year">Maturity Year </string>
    <string name="maturity_amount">Maturity Amount</string>
    <string name="amount_deposited">Total Amount Deposited</string>
    <string name="interest_gained">Total Interest Gained</string>

    <!--unit_report_item -->
    <string name="start_year_title">REPORT FOR YEAR </string>
    <string name="amount_deposited_title">Amount Deposited </string>
    <string name="opening_balance_title">Opening Balance </string>
    <string name="interest_earned_title">Interest Earned </string>
    <string name="closing_balance_title">Closing Balance </string>

    <!--my_plan_item-->
    <string name="my_plan_title">My Plan </string>
    <string name="start_year_title_my_plan">Plan Start Year</string>
    <string name="ppf_mode_title">PPF Mode</string>
    <string name="delete_my_plan">DELETE</string>

    <!--my_dialog -->
    <string name="Yes">YES</string>
    <string name="No">NO</string>
    <string name="AlertDialogTitle">ALERT </string>
    <string name="AlertDialogText">Are you sure you want to delete the plan? </string>

    <!--dummy  -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="widget_title">PPFCompanion</string>

    <string name="title_activity_my_plan">MyPlan</string>

    <!--about_ppf-->
    <string name="FAQ"> FREQUENTLY ASKED QUESTIONS</string>
    <string name="Query1">Who can apply under PPF scheme?</string>
    <string name="Query2">What is the Limit of Subscription to a PPF account? </string>
    <string name="Query3">How many subscriptions are permitted in a financial year? </string>
    <string name="Query4">What is the Rate of Interest under PPF? </string>
    <string name="Query5">Is nominations facility available under the scheme ?</string>
    <string name="Query6">When does a PPF account mature?</string>
    <string name="Query7">Is Partial Withdrawal account from the PPF account?</string>
    <string name="Query8">Can a PPF account continue with Deposits after Maturity? </string>
    <string name="Query9">When and what is the loan amount that can be availed? </string>
    <string name="Query10">Can a PPF account be transferred from one individual to another? </string>


    <string name="Answer1">An individual (Resident of India) can open a PPF account on his / her own behalf and / or on behalf of a
        minor of whom he is the guardian. An individual can open only one PPF account on his/ her own behalf.</string>
    <string name="Answer2">An individual on his / her own behalf and on behalf of a minor of whom he is the guardian can
        subscribe an amount (in integral multiples of ` 5/-) not less than 500/- and not more than ` 1,00,000/-,
        in a financial year.</string>
    <string name="Answer3">The subscription into an account can be made in a single lump sum or in installments
        not exceeding twelve in a financial year. </string>
    <string name="Answer4">Interest rate is notified by the Central Government in official gazette from time to time and
        is currently notified at 8.1% p.a.</string>
    <string name="Answer5">The PPF Scheme facilitates nominations of one or more persons to receive the
        amount standing to the subscriber’s credit in case of death. However no
        nomination(s) is possible in case of minor account.</string>
    <string name="Answer6">A subscriber can withdraw the entire balance standing to his / her credit after
        the expiry of fifteen years from the end of the financial year in which the initial
        subscription is made.</string>
    <string name="Answer7">Anytime after the expiry of five years from the end of the financial year in
        which the initial subscription is made, the subscriber can partially withdraw but not
        more than fifty percent (50%) from the balance Only one withdrawal is allowed per financial year. </string>
    <string name="Answer8">A subscriber may, after maturity of his / her PPF Account, exercise an option
        to subscribe for a further block periods of 5 years, subject to the prescribed limits of
        subscription. This option has to be exercised by the subscriber before the end of the
        first financial year after maturity.</string>
    <string name="Answer9">A subscriber can avail a loan on his / her PPF deposit any time after the expiry
        of one year from the end of the financial year in which the initial subscription was
        made but before the expiry of five years from the end of the financial year in which
        the initial subscription was made.</string>
    <string name="Answer10">A PPF a/c. is not transferable from one individual to another, as such the
        nominee cannot continue the account of a deceased subscriber in his own name.</string>


    <!-- LineGraph   -->

    <string name="linegraph_title">Closing Amount over Time&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="dataset">DataSet&#160;1</string>
    <string name="share_message">PPFCompanion - PPF (Public Provident Fund) calculator for the people of India. App provides reports and graphs based on type of PPF mode and amount being deposited.&#160;</string>
    <string name="piechart_title">Amount Deposited vs Interest gained at Maturity&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="report">REPORT</string>
    <string name="linegraph">LINE GRAPH</string>
    <string name="piechart">PIE CHART</string>
    <string name="ppfmode">Fixed Yearly Deposit</string>
    <string name="enter_details">Please enter all the details</string>
    <string name="amount_validity">Amount Deposite should be greater than 500</string>
    <string name="year_validity">Year Value must lie between&#160;</string>
    <string name="and">&#160;and&#160;</string>
    <string name="provide_data">You need to provide data for the chart.</string>
    <string name="toast_mainActivity">Selected mode is&#160;</string>
    <string name="empty"></string>
</resources>
