<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myPlans"
            android:icon="@drawable/ic_list_black_36dp"
            android:title="@string/my_plans" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator_36dp"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_info_black_36dp"
            android:title="@string/about_ppf" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_black_36dp"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
