<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FAQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FAQ" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/margin"
                android:background="#c0c0c0" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query1" />

            <TextView
                android:id="@+id/Answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query2" />

            <TextView
                android:id="@+id/Answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer2" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query3" />

            <TextView
                android:id="@+id/Answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer3" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query4" />

            <TextView
                android:id="@+id/Answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer4" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query5" />

            <TextView
                android:id="@+id/Answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer5" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query6" />

            <TextView
                android:id="@+id/Answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer6" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query7" />

            <TextView
                android:id="@+id/Answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer7" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query8" />

            <TextView
                android:id="@+id/Answer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer8" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query9" />

            <TextView
                android:id="@+id/Answer9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer9" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Query10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Query10" />

            <TextView
                android:id="@+id/Answer10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Answer10" />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/margin"
            android:background="#ffffff" />

    </LinearLayout>

</ScrollView>